app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *
 *= require pure
 *= require dragula/dist/dragula
 */

body {
  /* Show the scroll bar to reduce jumping */
  overflow-y: scroll;
}

.center-text {
  text-align: center;
}

.field_with_errors * {
  border-color: red !important;
}

hr {
  border-color: black;
  border-width: 1px;
  width: 65%;
}

textarea {
  resize: vertical;
}

